back2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back2
  labels:
    app: back2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back2
  template:
    metadata:
      labels:
        app: back2
    spec:
      containers:
      - name: nginx-back2
        image: nginx:1.7.9
        ports:
        - containerPort: 80
