back2/service.yml
---

kind: Service
apiVersion: v1
metadata:
  name: back2
spec:
  selector:
    app: back2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
